--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "A = np.array([[4, 2, 1], [4, 8, ]])"
    ]
   },
   {
