--- a/index.ipynb
+++ b/index.ipynb
@@ -249,11 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00, -2.77555756e-17,  0.00000000e+00],\n",
+       "       [-1.66533454e-16,  1.00000000e+00,  0.00000000e+00],\n",
+       "       [-5.55111512e-17, -1.38777878e-17,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "np.matrix.round(A_product)\n",
+    "A_product"
    ]
   },
   {
