--- a/index.ipynb
+++ b/index.ipynb
@@ -249,26 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 1.00000000e+00, -2.77555756e-17,  0.00000000e+00],\n",
-       "       [-1.66533454e-16,  1.00000000e+00,  0.00000000e+00],\n",
-       "       [-5.55111512e-17, -1.38777878e-17,  1.00000000e+00]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1. -0.  0.]\n",
+      " [-0.  1.  0.]\n",
+      " [-0. -0.  1.]]\n"
+     ]
     }
    ],
    "source": [
     "# Code here \n",
-    "np.matrix.round(A_product)\n",
-    "A_product"
+    "print(np.matrix.round(A_product))\n"
    ]
   },
   {
