--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,9 @@
    "source": [
     "# Code here \n",
     "A = np.matrix([[2, 1], [3, 4]])\n",
-    "B = "
+    "B = np.matrix([[35, 65]])\n",
+    "\n",
+    "A_inv = np."
    ]
   },
   {
