--- a/index.ipynb
+++ b/index.ipynb
@@ -344,15 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0.8, -0.2],\n",
+       "        [-0.6,  0.4]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code here \n",
     "A = np.matrix([[2, 1], [3, 4]])\n",
     "B = np.matrix([[35, 65]])\n",
     "\n",
-    "A_inv = np."
+    "A_inv = np.linalg.inv(A)\n",
+    "A_inv"
    ]
   },
   {
@@ -378,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n"
    ]
   },
   {
