--- a/index.ipynb
+++ b/index.ipynb
@@ -387,11 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "print(B.shape)\n"
    ]
   },
   {
