--- a/index.ipynb
+++ b/index.ipynb
@@ -387,21 +387,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2)\n"
+      "(1, 2)\n",
+      "(2, 1)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[35],\n",
+       "        [65]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Code here \n",
     "print(B.shape)\n",
-    "B = B.T\n"
+    "B = B.T\n",
+    "print(B.shape)\n",
+    "B"
    ]
   },
   {
@@ -422,7 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "X "
    ]
   },
   {
