--- a/index.ipynb
+++ b/index.ipynb
@@ -432,12 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[15.],\n",
+       "        [ 5.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code here \n",
-    "X "
+    "X = A_inv.dot(B)\n",
+    "X"
    ]
   },
   {
