--- a/index.ipynb
+++ b/index.ipynb
@@ -468,11 +468,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[35.]\n",
+      " [65.]]\n",
+      "[[35]\n",
+      " [65]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(A.dot(X))\n",
+    "print(B)"
    ]
   },
   {
