--- a/index.ipynb
+++ b/index.ipynb
@@ -516,7 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "x = np.linalg.solve(A, B)"
    ]
   },
   {
